# chumstats

./: .env.example  .gitignore  AGENTS.md  DESIGN.md  PRODUCT.md  README.md  ballshark-tray.pyw  ballshark.bat  capture.ps1  capture.py  carball-tray.pyw  carball.bat  chumstats-tray.pyw  chumstats.bat  compare.bat  dashboard.bat  open-dashboard.bat  open-overlay.bat  player.bat  players.bat  pyproject.toml  run.bat  setup-once.bat  smoke.py
.design/: _cl.html  _d.html  _h.html  audit.py  event_samples.py  events_inventory.py  flatten2.py  flatten_radius.py  imp2-about.json  imp2-dashboard.json  imp2-history.json  imp2-local-ab91f88b57d4.json  imp2-overlay.json  imp2-players.json  imp3-about.json  imp3-dashboard.json  imp3-history.json  imp4-dashboard.json  imp4-players.json  imp6-overlay.json  imp8-about.json  imp8-overlay.json  impeccable-_about.json  impeccable-_dashboard.json  impeccable-_history.json  impeccable-_match_local-ab91f88b57d4.json  impeccable-_overlay.json  impeccable-_overlay_last.json  impeccable-_overlay_live.json  impeccable-_overlay_me.json  impeccable-_overlay_session.json  impeccable-_players.json  inspect_ticks.py  last_matches.py  new_style.css  post_one_match.py  replace_style.py  statfeed_kinds.py  ws_probe.py
deploy/: friend-onboarding.md
docs/: BURNDOWN.md  REVAMP_PLAN.md  multi-user-network.md
scripts/: capture.ps1  capture.py  mock_emitter.py  repair_match_timestamps.py  smoke.py
tests/: conftest.py  test_aggregator.py  test_analytics.py  test_breakdown.py  test_config_wizard.py  test_corrupt_match.py  test_data_quality.py  test_envelope.py  test_golden.py  test_identity.py  test_ingest_drain.py  test_integrity.py  test_multi_upload.py  test_store.py  test_upload_validation.py
(+95 files in other folders)
