[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chumstats"
version = "0.0.1"
description = "Rocket League Stats API ingest, session/lifetime tracker, and overlay backend."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "websockets>=12",
]
bot = [
    "discord.py>=2.3",
    "pillow>=10.0",
]
tray = [
    "pystray>=0.19",
    "pillow>=10.0",
    "websocket-client>=1.7",
]
dev = [
    "pytest>=8",
    "ruff>=0.5",
]

[project.scripts]
chumstats = "chumstats.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/chumstats"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]
